@@ -1,4 +1,4 @@
-.TH "src/ho_string.h" 3 "23 Jun 2008" "Version 0.10.10" "libhocr" \" -*- nroff -*-
+.TH "src/ho_string.h" 3 "26 Jun 2008" "Version 0.10.11" "libhocr" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
